force-app/main/default/objects/abc__c/fields/Custom_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_2__c</fullName>
    <description>akash.saini3046@gmail.com</description>
    <label>Custom_Field_2</label>
    <type>Email</type>
</CustomField>