force-app/main/default/objects/abc__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox</description>
    <label>Field_1</label>
    <type>Checkbox</type>
</CustomField>