force-app/main/default/objects/abc__c/fields/New_Custom_label__c.field-meta.xml
<CustomField>
    <fullName>New_Custom_label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox--------------------</description>
    <inlineHelpText>Checkbox</inlineHelpText>
    <label>New_Custom_label for test</label>
    <type>Checkbox</type>
</CustomField>