force-app/main/default/objects/abc__c/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <description>FLS testing.</description>
    <label>Test-Field</label>
    <type>AutoNumber</type>
</CustomField>